--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ plugins:
 title: [Flipper Zero Payloads]
 description: [List of free and open source payloads for Flipper Zero]
 show_downloads: [true]
+google_analytics: [G-7PFFNGGJQL]
