--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [Flipper Zero Payloads]
-description: [List of free and open source payloads for Flipper Zero]
-show_downloads: [true]
-google_analytics: [G-7PFFNGGJQL]
+title: Flipper Zero Payloads
+description: List of free and open source payloads for Flipper Zero
+show_downloads: true
+google_analytics: G-7PFFNGGJQL
