--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ title: Flipper Zero Payloads
 description: List of free and open source payloads for Flipper Zero
 show_downloads: true
 google_analytics: G-7PFFNGGJQL
+copyright: "2023"
+logo: "img/logo-repository.png"
