--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,15 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: Flipper Zero Payloads
-description: List of free and open source payloads for Flipper Zero
+title: "Flipper Zero Payloads"
+description: "List of free and libre source payloads for Flipper Zero"
 show_downloads: true
+logo: "logo.gif"
 google_analytics: G-7PFFNGGJQL
-copyright: "2023"
-logo: "img/logo-repository.png"
+repository: "aleff-github/my-flipper-shits"
+author:
+  name   : "Aleff"
+  avatar : "aleff.jpg"  # placed in /images/
+  bio    : "I'm Alessandro Greco, aka Aleff, a Computer Science graduate with a passion for networks and IT security."
+  email  : "alessandro.greco.1@protonmail.com"
+  uri    : "https://aleff-gitlab.gitlab.io/"
